--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 MONGO = mongodb+srv://ali:ali@cluster0.szsn9.mongodb.net/next-blog?retryWrites=true&w=majority
+
+AUTH_SECRET = alsdjlksjdfjl
+AUTH_URL = http://localhost:3000/api/auth
+
+GITHUB_CLIENT_ID = Iv1.ae8d7f7a340290bb
+GITHUB_SECRET = 14ed10d3629836ef938068b274b59c89b0978089
